Wireframe bones with custom shapes not working in object mode #55068

Closed
opened 2018-05-15 12:24:36 +02:00 by Dalai Felinto · 5 comments

Blender Version
Broken: 55b241d32a (blender2.8 HEAD)
Worked: 2.79a

Short description of error
Bones using faceless custom shape with wireframe were supposed to be visible in object mode, yet they are not.

Exact steps for others to reproduce the error

wireframe_custom_shape.blend

Blender 2.7:

2.7.png

Blender 2.8

2.8.png

**Blender Version** Broken: 55b241d32a (blender2.8 HEAD) Worked: 2.79a **Short description of error** Bones using faceless custom shape with wireframe were supposed to be visible in object mode, yet they are not. **Exact steps for others to reproduce the error** [wireframe_custom_shape.blend](https://archive.blender.org/developer/F3368827/wireframe_custom_shape.blend) Blender 2.7: ![2.7.png](https://archive.blender.org/developer/F3368860/2.7.png) Blender 2.8 ![2.8.png](https://archive.blender.org/developer/F3368859/2.8.png)
Clément Foucault was assigned by Dalai Felinto 2018-05-15 12:24:36 +02:00
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

Interesting enough, when texture painting the bones seems kind of to be drawn when the mesh is behind it.

wire_bones.png

Interesting enough, when texture painting the bones seems kind of to be drawn when the mesh is behind it. ![wire_bones.png](https://archive.blender.org/developer/F3369014/wire_bones.png)
Dalai Felinto changed title from Wireframe bones with custom shapes not working in object mode to Add Paint Slots for texture painting not working. 2018-05-15 13:06:29 +02:00
Clément Foucault was unassigned by Dalai Felinto 2018-05-15 13:06:29 +02:00
Author
Owner

Added subscriber: @fclem

Added subscriber: @fclem
Dalai Felinto changed title from Add Paint Slots for texture painting not working. to Wireframe bones with custom shapes not working in object mode 2018-05-15 16:12:28 +02:00
Clément Foucault was assigned by Dalai Felinto 2018-05-15 16:12:38 +02:00

This issue was referenced by 5ed702dc9c

This issue was referenced by 5ed702dc9cbd94d592b1997e6bd35d5b6e7a639f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55068
No description provided.