Armature: Fix T55068: Wireframe bones with custom shapes not working in object mode